SERVER-75806 Make the analyzeShardKey machinery run commands via the ReplicaSetNodeProcessInterface executor or Grid fixed executor